# OxidizedMips

./: .gitignore  Cargo.toml  build-debug.sh  build.sh  mips.json  rust-gdb-multiarch.sh
.cargo/: config  config.toml
binary/: Cargo.toml  build.rs
binary/res/: character-tile-set.comp
binary/res/sound/: tetris_gb.txt
binary/src/: main.rs  tetris.rs
binary/src/tetris/: logic.rs  mod.rs  tetris.rs
binary/src/util/: display.rs
interface/src/: core_rust.rs  lib.rs  sys.rs
mips/: link.map  link.x  start-gdb.sh
