[package]
name = "binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interface = { path = "../interface" }

[build-dependencies]
png = {version = "*"}
rustc-fami = {path = "../../RustcFami"}

[profile.release]
debug=true